--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdown-preview-plus",
+  "name": "markdown-preview-katex",
   "version": "0.1.0",
   "main": "./lib/main",
   "description": "Markdown + LaTeX preview in Atom with Katex",
