--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "fs-plus": "^2.0.0",
     "grim": "^1.0.0",
     "highlights": "^1.0.0",
-    "pathwatcher": "^3.0",
     "temp": "^0.8.1",
     "underscore-plus": "^1.0.0",
     "wrench": "^1.5.0",
     "katex": "^0.1.1",
-    "roaster": "^1.1.2"
+    "roaster": "https://github.com/Galadirith/roaster/tarball/marked-mathjax",
+    "pathwatcher": "^4.1.0"
   }
 }
