--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "markdown-preview-katex",
   "version": "0.3.1",
   "main": "./lib/main",
-  "description": "Markdown + LaTeX preview in Atom with Katex",
+  "description": "Markdown + LaTeX preview in Atom with KaTeX",
   "repository": "https://github.com/abejfehr/markdown-preview-katex",
   "license": "MIT",
   "engines": {
