--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "temp": "^0.8.1",
     "underscore-plus": "^1.0.0",
     "wrench": "^1.5.0",
-    "katex": "^0.1.1",
-    "pathwatcher": "^4.1.0"
+    "pathwatcher": "^4.1.0",
+    "katex": "^0.2.0"
   }
 }
